# adaptive-feature-interaction-learning-with-dynamic-gating

./: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: config.yaml
scripts/: evaluate.py  predict.py  train.py
src/adaptive_feature_interaction_learning_with_dynamic_gating/: __init__.py
src/adaptive_feature_interaction_learning_with_dynamic_gating/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_feature_interaction_learning_with_dynamic_gating/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_feature_interaction_learning_with_dynamic_gating/models/: __init__.py  components.py  model.py
src/adaptive_feature_interaction_learning_with_dynamic_gating/training/: __init__.py  trainer.py
src/adaptive_feature_interaction_learning_with_dynamic_gating/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
